force-app/main/default/objects/Target_Period__c/fields/JC_Number__c.field-meta.xml
<CustomField>
    <fullName>JC_Number__c</fullName>
    <label>JC Number</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>